--- a/src/main/webapp/app/entities/site/site-dialog.component.html
+++ b/src/main/webapp/app/entities/site/site-dialog.component.html
@@ -28,6 +28,20 @@
 			</div>
 		</div>
 		<div class="form-group">
+			<label class="form-control-label" jhiTranslate="referenceApp.site.localOffice" for="field_localOffice">Local
+				Office</label>
+			<input type="text" class="form-control" name="localOffice" id="field_localOffice"
+				   [(ngModel)]="site.localOffice"
+			/>
+		</div>
+		<div class="form-group">
+			<label class="form-control-label" jhiTranslate="referenceApp.site.trustCode" for="field_trustCode">Trust
+				Code</label>
+			<input type="text" class="form-control" name="trustCode" id="field_trustCode"
+				   [(ngModel)]="site.trustCode"
+			/>
+		</div>
+		<div class="form-group">
 			<label class="form-control-label" jhiTranslate="referenceApp.site.siteName" for="field_siteName">Site
 				Name</label>
 			<input type="text" class="form-control" name="siteName" id="field_siteName"
@@ -70,25 +84,6 @@
 			/>
 		</div>
 
-		<div class="form-group">
-			<label jhiTranslate="referenceApp.site.localOffice" for="field_localOffice">Local Office</label>
-			<select class="form-control" id="field_localOffice" name="localOffice" [(ngModel)]="site.localOfficeId">
-				<option [ngValue]="null"></option>
-				<option [ngValue]="localOfficeOption.id"
-						*ngFor="let localOfficeOption of localoffices; trackBy: trackLocalOfficeById">
-					{{localOfficeOption.id}}
-				</option>
-			</select>
-		</div>
-		<div class="form-group">
-			<label jhiTranslate="referenceApp.site.trustCode" for="field_trustCode">Trust Code</label>
-			<select class="form-control" id="field_trustCode" name="trustCode" [(ngModel)]="site.trustCodeId">
-				<option [ngValue]="null"></option>
-				<option [ngValue]="trustOption.id" *ngFor="let trustOption of trusts; trackBy: trackTrustById">
-					{{trustOption.id}}
-				</option>
-			</select>
-		</div>
 	</div>
 	<div class="modal-footer">
 		<button type="button" class="btn btn-default" data-dismiss="modal" (click)="clear()">
