--- a/src/main/webapp/app/entities/trust/trust-detail.component.html
+++ b/src/main/webapp/app/entities/trust/trust-detail.component.html
@@ -7,6 +7,10 @@
 		<dd>
 			<span>{{trust.code}}</span>
 		</dd>
+		<dt><span jhiTranslate="referenceApp.trust.localOffice">Local Office</span></dt>
+		<dd>
+			<span>{{trust.localOffice}}</span>
+		</dd>
 		<dt><span jhiTranslate="referenceApp.trust.status">Status</span></dt>
 		<dd>
 			<span>{{trust.status}}</span>
@@ -30,12 +34,6 @@
 		<dt><span jhiTranslate="referenceApp.trust.postCode">Post Code</span></dt>
 		<dd>
 			<span>{{trust.postCode}}</span>
-		</dd>
-		<dt><span jhiTranslate="referenceApp.trust.localOffice">Local Office</span></dt>
-		<dd>
-			<div *ngIf="trust.localOfficeId">
-				<a [routerLink]="['/local-office', trust.localOfficeId]">{{trust.localOfficeId}}</a>
-			</div>
 		</dd>
 	</dl>
 
