- ported grades, sites, trusts and DBC's server site functionality from the reference service 1.0

--- a/src/main/webapp/app/entities/dbc/dbc-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/dbc/dbc-delete-dialog.component.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="modal-body">
 		<jhi-alert-error></jhi-alert-error>
-		<p jhiTranslate="referenceApp.dBC.delete.question" translateValues="{id: '{{dBC.id}}'}">Are you sure you want to
+		<p jhiTranslate="referenceApp.dbc.delete.question" translateValues="{id: '{{dBC.id}}'}">Are you sure you want to
 			delete this DBC?</p>
 	</div>
 	<div class="modal-footer">
