--- a/src/main/webapp/app/entities/dbc/dbc-detail.component.html
+++ b/src/main/webapp/app/entities/dbc/dbc-detail.component.html
@@ -1,17 +1,17 @@
 <div *ngIf="dBC">
-	<h2><span jhiTranslate="referenceApp.dBC.detail.title">DBC</span> {{dBC.id}}</h2>
+	<h2><span jhiTranslate="referenceApp.dbc.detail.title">DBC</span> {{dBC.id}}</h2>
 	<hr>
 	<jhi-alert-error></jhi-alert-error>
 	<dl class="row-md jh-entity-details">
-		<dt><span jhiTranslate="referenceApp.dBC.dbc">Dbc</span></dt>
+		<dt><span jhiTranslate="referenceApp.dbc.dbc">Dbc</span></dt>
 		<dd>
 			<span>{{dBC.dbc}}</span>
 		</dd>
-		<dt><span jhiTranslate="referenceApp.dBC.name">Name</span></dt>
+		<dt><span jhiTranslate="referenceApp.dbc.name">Name</span></dt>
 		<dd>
 			<span>{{dBC.name}}</span>
 		</dd>
-		<dt><span jhiTranslate="referenceApp.dBC.abbr">Abbr</span></dt>
+		<dt><span jhiTranslate="referenceApp.dbc.abbr">Abbr</span></dt>
 		<dd>
 			<span>{{dBC.abbr}}</span>
 		</dd>
