--- a/src/main/webapp/app/entities/dbc/dbc.component.html
+++ b/src/main/webapp/app/entities/dbc/dbc.component.html
@@ -1,10 +1,10 @@
 <div>
 	<h2>
-		<span jhiTranslate="referenceApp.dBC.home.title">DBCS</span>
+		<span jhiTranslate="referenceApp.dbc.home.title">DBCS</span>
 		<button class="btn btn-primary float-right create-dbc"
 				[routerLink]="['/', { outlets: { popup: ['dbc-new'] } }]">
 			<span class="fa fa-plus"></span>
-			<span jhiTranslate="referenceApp.dBC.home.createLabel">
+			<span jhiTranslate="referenceApp.dbc.home.createLabel">
             Create new DBC
             </span>
 		</button>
@@ -18,9 +18,9 @@
 			<thead>
 			<tr>
 				<th><span jhiTranslate="global.field.id">ID</span></th>
-				<th><span jhiTranslate="referenceApp.dBC.dbc">Dbc</span></th>
-				<th><span jhiTranslate="referenceApp.dBC.name">Name</span></th>
-				<th><span jhiTranslate="referenceApp.dBC.abbr">Abbr</span></th>
+				<th><span jhiTranslate="referenceApp.dbc.dbc">Dbc</span></th>
+				<th><span jhiTranslate="referenceApp.dbc.name">Name</span></th>
+				<th><span jhiTranslate="referenceApp.dbc.abbr">Abbr</span></th>
 				<th></th>
 			</tr>
 			</thead>
